# titan

./: .gitignore  CLAUDE.md  README.md  titan.sln
backend/Titan.API/: Program.cs  README.md  Titan.API.csproj
backend/Titan.API/Controllers/: CustomRocketsController.cs  RocketsController.cs  SimulationsController.cs
backend/Titan.API/Data/: TitanDbContext.cs
backend/Titan.API/Hubs/: TelemetryHub.cs
backend/Titan.API/Models/: RocketPreset.cs  SimulationModels.cs
backend/Titan.API/Native/: TitanInterop.cs
backend/Titan.API/Services/: SimulationStore.cs
backend/Titan.PhysicsEngine/: CMakeLists.txt  README.md
backend/Titan.PhysicsEngine/include/: CMakeCache.txt  Makefile  cmake_install.cmake
backend/Titan.PhysicsEngine/include/core/: Constants.h  State.h  Vector3.h
backend/Titan.PhysicsEngine/include/environment/: Atmosphere.h  CelestialBody.h  USStandardAtmosphere.h
backend/Titan.PhysicsEngine/include/events/: EventBus.h  FlightSequencer.h  SimEvent.h
backend/Titan.PhysicsEngine/include/export/: DataExporter.h
backend/Titan.PhysicsEngine/include/gnc/: Actuator.h  Controller.h  Navigator.h  PIDController.h  PointingMode.h
backend/Titan.PhysicsEngine/include/guidance/: Guidance.h  OrbitalCircularizationGuidance.h  TargetApoapsisGuidance.h
backend/Titan.PhysicsEngine/include/integrators/: EulerIntegrator.h  Integrator.h  RK45Integrator.h  RK4Integrator.h  State.h
backend/Titan.PhysicsEngine/include/interop/: TitanCAPI.h
backend/Titan.PhysicsEngine/include/math/: Quaternion.h  Vector2.h  Vector3.h
backend/Titan.PhysicsEngine/include/orbital/: OrbitalElements.h  OrbitalMechanics.h
backend/Titan.PhysicsEngine/include/physics/: AtmosphereModel.h  AtmosphericDrag.h  ForceModel.h  GravityModel.h  J2Gravity.h  PointMassGravity.h  SolarRadiationPressure.h  ThrustForce.h
backend/Titan.PhysicsEngine/include/simulation/: LaunchVehicle2D.h  LaunchVehicle3D.h  Rocket1D.h  Rocket2D.h  SimState.h  Simulation.h  Stage.h  TrajectoryPoint.h
backend/Titan.PhysicsEngine/include/telemetry/: TelemetryBus.h
backend/Titan.PhysicsEngine/include/vehicle/: Vehicle.h
backend/Titan.PhysicsEngine/src/: main.cpp
backend/Titan.PhysicsEngine/src/export/: DataExporter.cpp
backend/Titan.PhysicsEngine/src/gnc/: PIDController.cpp
backend/Titan.PhysicsEngine/src/guidance/: TargetApoapsisGuidance.cpp
backend/Titan.PhysicsEngine/src/integrators/: EulerIntegrator.cpp  RK45Integrator.cpp  RK4Integrator.cpp
backend/Titan.PhysicsEngine/src/interop/: TitanCAPI.cpp
backend/Titan.PhysicsEngine/src/orbital/: OrbitalMechanics.cpp
backend/Titan.PhysicsEngine/src/physics/: AtmosphereModel.cpp  GravityModel.cpp
backend/Titan.PhysicsEngine/src/simulation/: LaunchVehicle2D.cpp  LaunchVehicle3D.cpp  Rocket1D.cpp  Rocket2D.cpp  Simulation.cpp
backend/Titan.PhysicsEngine/tests/: test_main.cpp
docs/: architecture-overview.md
docs/architecture/: api-layer.md  frontend.md  physics-engine.md  system-overview.md
docs/physics/: aerodynamics.md  atmospheric-model.md  attitude-dynamics.md  gravity-models.md  guidance-systems.md  integration-methods.md  mass-variation.md  orbital-mechanics.md  rocket-dynamics.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: HeroSection.tsx  HowItWorks.tsx  LaunchConfig.tsx  MissionControlDashboard.tsx  MissionEventTimeline.tsx  NavBall.tsx  RocketBuilder.tsx  RocketComparison.tsx  SimulationHistory.tsx  TelemetryDashboard.tsx  TrajectoryViewer.tsx
frontend/src/services/: api.ts  signalr.ts
(+3 files in other folders)
